[package]
authors = ["phil <isaac.phil@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "holes"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
cortex-m-semihosting = "0.3.7"
# stm32f3-discovery = "0.7.2"
panic-halt = "0.2.0"
max7219 = "0.3.1"
stm32f3xx-hal = { version = "0.9.0", features = ["rt", "stm32f303xc"] }

# this lets you use `cargo fix`!
[[bin]]
name = "holes"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
